Fix: modal positioning on smaller screens

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -138,12 +138,13 @@
 
 @media screen and (max-width: 768px) {
     .modal_content {
-        position: absolute;
+        position: fixed;
         transform: translate(-50%, -50%);
         background-color: rgb(50, 50, 50);
         border-radius: 5px;
         width:100%;
         height:50%;
+        margin-left:0;  
 
         z-index: 10;
         object-fit: contain;       
